--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mypy-boto3-s3==1.24.76
 pip-chill==1.0.1
 pymongo==4.2.0
 python-dotenv==0.21.0
+pandas==1.5.2
 types-s3transfer==0.6.0.post4
 uvicorn==0.18.3
 watchfiles==0.17.0
